--- a/templates/user-feed.html
+++ b/templates/user-feed.html
@@ -17,14 +17,16 @@
         </svg>
       </a>
       <a href="/" class="header__logo-link">
-        <svg class="header__logo" width="142" height="26">
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#skypro"></use>
+         <svg class="header__logo" width="100" height="26">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#search"></use>
         </svg>
+
       </a>
     </div>
   </header>
   <main class="container">
     {% for post in user %}
+    <h1>{{ post.poster_name.capitalize()}}</h1><br>
       <section class="items">
         <div class="items__item item">
           <div class="item__top">
